external-crates/move/crates/move-compiler/tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid.unit_test.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid.move:10:35
   │
10 │     #[expected_failure(abort_code=a::a::C)]
   │                                   ^ Expected an address in this position, not a module

